--- a/Touch-Screen-Select-Word/Base.lproj/Main.storyboard
+++ b/Touch-Screen-Select-Word/Base.lproj/Main.storyboard
@@ -16,9 +16,27 @@
                     <view key="view" contentMode="scaleToFill" id="AsJ-yA-eAp">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="RD8-Qq-JqP" customClass="SSWTextView" customModule="Touch_Screen_Select_Word" customModuleProvider="target">
+                                <rect key="frame" x="20" y="40" width="560" height="491"/>
+                                <color key="backgroundColor" red="1" green="0.086274509799999996" blue="0.5568627451" alpha="1" colorSpace="calibratedRGB"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="RD8-Qq-JqP" firstAttribute="leading" secondItem="AsJ-yA-eAp" secondAttribute="leading" constant="20" id="X2Z-0s-SZg"/>
+                            <constraint firstAttribute="trailing" secondItem="RD8-Qq-JqP" secondAttribute="trailing" constant="20" id="YNW-GJ-xWo"/>
+                            <constraint firstItem="RD8-Qq-JqP" firstAttribute="top" secondItem="5il-kJ-fBJ" secondAttribute="bottom" constant="20" id="k0P-O6-KSe"/>
+                            <constraint firstItem="ZIG-RD-Fc0" firstAttribute="top" secondItem="RD8-Qq-JqP" secondAttribute="bottom" constant="20" id="ybE-tl-FDw"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item 2" id="vSf-Df-XN2"/>
+                    <connections>
+                        <outlet property="sswTextView" destination="RD8-Qq-JqP" id="4YK-GX-6Ys"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ovz-g2-0ZK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -39,7 +57,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4OU-wT-hIa" customClass="SSWLabel" customModule="Touch_Screen_Select_Word" customModuleProvider="target">
                                 <rect key="frame" x="20" y="40" width="560" height="491"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
