--- a/Touch-Screen-Select-Word/Base.lproj/Main.storyboard
+++ b/Touch-Screen-Select-Word/Base.lproj/Main.storyboard
@@ -56,6 +56,7 @@
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4OU-wT-hIa" customClass="SSWLabel" customModule="Touch_Screen_Select_Word" customModuleProvider="target">
                                 <rect key="frame" x="20" y="40" width="560" height="491"/>
+                                <color key="backgroundColor" red="0.2770422904631652" green="1" blue="0.1200053429336615" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
